--- a/blockchainapplicability.tex
+++ b/blockchainapplicability.tex
@@ -115,7 +115,7 @@ Ambrosus focuses on tracking the quality of the goods transported during shipmen
 
 The enterprises can then query this data and retrieve it immediately to their own databases, effectively achieving a better quality assurance. It is also provides enforceable proof of the quality or, if otherwise, the lack of it.
 
-Like OriginTrail, Ambrosus also has its own protocol, called AMB-NET, which hosts smart-contracts and comunicates with the Ethereum blockchain.
+Like OriginTrail, Ambrosus also has its own protocol, called AMB-NET, which hosts smart-contracts and communicates with the Ethereum blockchain.
 
 \subsubsection{Relevance and Applicability}
 This is another project with a more narrow scope, specializing in the tracking of the quality by using IoT. It is something that the other projects are not implementing, but it is important nonetheless. To some industries, it is even more important than any other feature, which makes quality-tracking a \textbf{must} in a supply chain management blockchain project.
