--- a/conclusions.tex
+++ b/conclusions.tex
@@ -46,7 +46,7 @@ These contributions might be useful for future research:
 	\end{itemize}
 	\item \textbf{Software Engineering Artifacts}
 	\begin{itemize}
-		\item Framework Evaluation and Architectural design, including a Hyperledger Composer model, a Prototype implementation and a validation of the feasibility of the requirements
+		\item Framework Evaluation and Architectural design, including a Hyperledger Composer model\footnote{The code developed for this model is open source, and can be found at \url{https://github.com/coletiv/supplychain-composer-thesis}.}, a Prototype implementation and a validation of the feasibility of the requirements
 	\end{itemize}
 	%\item \textbf{Analysis of limitations of the Hyperledger Composer framework}
 	%\item \textbf{Final considerations and analysis of the feasibility of using Blockchain as an architectural design for Supply Chain Management}
@@ -57,7 +57,7 @@ These contributions might be useful for future research:
 
 \section{Difficulties}
 
-The work done in this research was not always linear, even though the logic is made to be linear. Since the beggining of the research, questions arised as to what points should be focused, what work would make the contributions important enough to reach a good conclusion. 
+The work done in this research was not always linear, even though the logic is made to be linear. Since the beginning of the research, questions arose as to what points should be focused, what work would make the contributions important enough to reach a good conclusion. 
 
 One of the initial difficulties that most impacted the research was the lack of a quantitative baseline to compare the proposed design to. There are many other projects that attempt to, in one way or another, enhance the capabilities of supply chain by applying blockchain as an architecture, some even showcased in the literature review. However, none had publicly available efficiency metrics that could be used for this project to be compared to. Many developers and companies were contacted to try to collect more data from the existing projects, to establish a baseline but the contacts did not fall through in a satisfactory way. 
 
@@ -71,7 +71,7 @@ Finally, without a comparison baseline, the survey was developed, as a way to ge
 
 \section{Future Work}
 
-The work here done was introductory in nature, and explored the requirements and their satisfaction as a whole. Additionaly, the maturity of the tools used was questionable. This research can be used as the groundwork for more important conclusions and contributions to be reached.
+The work here done was introductory in nature, and explored the requirements and their satisfaction as a whole. Additionally, the maturity of the tools used was questionable. This research can be used as the groundwork for more important conclusions and contributions to be reached.
 
 Future work might include:
 \begin{itemize}
@@ -82,7 +82,7 @@ Future work might include:
 		\item "Applying Blockchain as a financial alternative in the Supply Chain", for instance, can be a topic of research, among others.
 	\end{itemize}
 	\item Research and attempt to use different frameworks to fulfill the same requirements that were elicited in this dissertation.
-	\item Build a more complete topological network for the proof-of-concept, thouroughly analyze the performance and compare it to other systems and architectures, including systems different from Blockchain.
+	\item Build a more complete topological network for the proof-of-concept, thoroughly analyze the performance and compare it to other systems and architectures, including systems different from Blockchain.
 	
 \end{itemize} 
 
