--- a/problemstatement.tex
+++ b/problemstatement.tex
@@ -37,7 +37,7 @@ The real problem occurs when the companies have no common ground and the data is
 
 \item \textbf{Tracking}
 %Tracking - specify why it is important
-During a product's lifetime, a lot of alterations occur and, sometimes, the records about the origins of the products are lost, falsified, or flat out not kept in a registry. This leads to unreliability in the goods the consumers use everyday and it may happen that some products are falsified and not the real product they were advertised to be. Additionaly, it can also happen that the products, not being properly tracked, do not hold up to the conditions or quality standards that are required by the regulatory entities. This can sometimes even lead to safety hazards. If a product is subject to hazardous conditions during any part of its lifecycle, it may become dangerous to be used or consumed.
+During a product's lifetime, a lot of alterations occur and, sometimes, the records about the origins of the products are lost, falsified, or flat out not kept in a registry. This leads to unreliability in the goods the consumers use everyday and it may happen that some products are falsified and not the real product they were advertised to be. Additionally, it can also happen that the products, not being properly tracked, do not hold up to the conditions or quality standards that are required by the regulatory entities. This can sometimes even lead to safety hazards. If a product is subject to hazardous conditions during any part of its lifecycle, it may become dangerous to be used or consumed.
 
 For this reason, it is of the utmost importance that the products are tracked since their origin, right up until the delivery to the final customer, as well as the conditions they are shipped in and the transformations they suffer.
 
