--- a/prototype/prototype1.tex
+++ b/prototype/prototype1.tex
@@ -12,11 +12,11 @@ The requirements for the choice of a framework can be partially derived from the
 
 \par \textbf{Security}: From Section~\ref{sec-survey-improvement-functionalities}, it was ascerted that the improvement of information privacy in supply chains was not very important in itself. Maybe it is something that the current systems already do well, but as we can see, \textbf{there are still some outstanding concerns which deal with other security aspects that still need to be taken care of}: access control and fraud detection seem to rank high on the requirements for such a system. \textbf{Thus, the selected framework should support a highly controlled environment, where the actions each user takes should be properly authorized and there are good authentication mechanisms. Some fraud verification checks should be supported}.
 
-\par \textbf{Traceability}: For the traceability requirements, the proposed system should be able to track all information, including changes in the system, registries of assets, transactions, network participants and organizations. It should also be open to outside regulatory entities, so that they can look into the system for auditing. Additionaly, sanity checks and other fraud-detection operations should be possible, possibly through smart-contract functionality. \textbf{Thus, the selected framework must support the management of data in the form of assets, entities and organizations, which should be accessible only to specific entities, including auditors}.
+\par \textbf{Traceability}: For the traceability requirements, the proposed system should be able to track all information, including changes in the system, registries of assets, transactions, network participants and organizations. It should also be open to outside regulatory entities, so that they can look into the system for auditing. Additionally, sanity checks and other fraud-detection operations should be possible, possibly through smart-contract functionality. \textbf{Thus, the selected framework must support the management of data in the form of assets, entities and organizations, which should be accessible only to specific entities, including auditors}.
 
 \par \textbf{Synchronization}: As the source of truth, the blockchain should be easily accessible to any external system that needs to query or insert data. The elicited requirements for synchronization include the development of standards and system interoperability for real-time sharing of the information. \textbf{Thus, the selected framework should easily expose the blockchain information to outside systems (for instance, through REST APIs) using predefined data formats}.
 
-\par \textbf{Transaction Enforcement and Financial domain}: There is interest in financial applications, and cryptocurrencies are a part of this. However, for financial applications to be possible in the supply chain using blockchain, a native blockchain cryptocurrency is not necessarily needed, as cryptocurrencies can be simulated using balances, depending on the design of the blockchain network. For this, and other functionalities to work, smart contract functionality should exist, though. \textbf{Thus, the selected framework should either have a native cryptocurrency, or allow for the design of some kind of digital balance or token. Additionaly, it should support smart contracts}.
+\par \textbf{Transaction Enforcement and Financial domain}: There is interest in financial applications, and cryptocurrencies are a part of this. However, for financial applications to be possible in the supply chain using blockchain, a native blockchain cryptocurrency is not necessarily needed, as cryptocurrencies can be simulated using balances, depending on the design of the blockchain network. For this, and other functionalities to work, smart contract functionality should exist, though. \textbf{Thus, the selected framework should either have a native cryptocurrency, or allow for the design of some kind of digital balance or token. Additionally, it should support smart contracts}.
 
 
 This information is summarized in Table~\ref{table-framework-requirements}.
@@ -33,7 +33,7 @@ This information is summarized in Table~\ref{table-framework-requirements}.
 	\multirow{2}{*}{Traceability}                                                                              & Management of data: assets, entities, organizations                                                                \\ \cline{2-2} 
 																											   & Data access controlled, but accessible to auditors                                                                 \\ \hline
 	\multirow{2}{*}{Synchronization}                                                                           & Expose data to the outside systems through APIs                                                                    \\ \cline{2-2} 
-																											   & Allow the use of predefine data formats                                                                            \\ \hline
+																											   & Allow the use of predefined data formats                                                                            \\ \hline
 	\multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Transaction \\ Enforcement and\\ Financial domain\end{tabular}} & Smart Contracts                                                                                                    \\ \cline{2-2} 
 																											   & \begin{tabular}[c]{@{}l@{}}Native cryptocurrency or a way to simulate currencies or\\ account balance\end{tabular} \\ \hline
 	\end{tabular}
@@ -54,7 +54,7 @@ Crossing these requirements with the capabilities of the frameworks presented in
 	\item Hyperledger Fabric - It has the needed mechanisms for authentication and authorization, and, similarly to the other frameworks, has smart contract capability. It is highly customizable, allowing for all the data and identity management needed. As for synchronization, it features easy to deploy rest servers, which is also important. However, it has a setback: though it is customizable, it does not feature a native cryptocurrency, so financial transactions are possible, but only if designed from scratch to be simulated by the network.
 \end{itemize}
 
-\textbf{From a requirements perspective, Hyperledger fits pratically all of the requirements}, if we assume that financial transactions can be simulated within the network. Ethereum has the setbacks of cost and security, while Corda has the setback of lacking asset management and traceability.
+\textbf{From a requirements perspective, Hyperledger fits practically all of the requirements}, if we assume that financial transactions can be simulated within the network. Ethereum has the setbacks of cost and security, while Corda has the setback of lacking asset management and traceability.
 
 
 To make the framework decision final, a performance comparison should also be used.  Based on previously published studies, which were mentioned in~\ref{sec-performance-comparison}, Hyperledger has a lower latency, execution time and higher throughput than Ethereum. All while being cheaper to maintain and satisfying more requirements than any of the other analysed frameworks.
