--- a/references.bib
+++ b/references.bib
@@ -572,7 +572,7 @@ urldate = {2018-05-20},
 year = {2018}
 }
 
-@ARTICLE{720574, 
+@article{720574, 
 author={}, 
 journal={IEEE Std 830-1998}, 
 title={IEEE Recommended Practice for Software Requirements Specifications}, 
