--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -25,7 +25,7 @@ Therefore, the following classification for the lists of results will be adopted
 \subsection*{1 - Rank the importance of some aspects which Supply Chains aim to improve.}
  
 %Dividir em mais imagens?
-\todo{fcorreia: sim, está muito pequeno para se ler assim. talvez quatro ou cinco destes gráficos lado a lado fiquem ok...}
+%\todo{fcorreia: sim, está muito pequeno para se ler assim. talvez quatro ou cinco destes gráficos lado a lado fiquem ok...}
 
 \begin{figure}[h]
 \centering
@@ -38,25 +38,26 @@ Therefore, the following classification for the lists of results will be adopted
 
 \begin{table}[h]
 \centering
-
+\caption{Question results metrics for the question to rank the importance of improvement aspects of the supply chain.}
+\label{table:metrics-importance-improvement-sc}
+\resizebox{\textwidth}{!}{
 \begin{tabular}{l|l|l|l|l|l|l|}
 \cline{2-7}
                                                                                                     & Mode & Median & Mean   & \begin{tabular}[c]{@{}l@{}}Standard\\ Deviation\end{tabular} & Range & Skewness \\ \hline
-\multicolumn{1}{|l|}{Traceability}                                                                  & 5    & 5      & 4,400  & 1,1180                                                       & 3     & -1,6722  \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Development\\ of Industry\\ Standards\end{tabular}} & 4    & 4      & 3,6250 & 1,0555                                                       & 3     & -0,3592  \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Fraud\\ Detection\end{tabular}}                     & 5    & 5      & 4,1304 & 1,1795                                                       & 3     & -1,0019  \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Automated\\ Information \\ Sharing\end{tabular}}    & 5    & 4      & 3,6400 & 1,1860                                                       & 3     & -0,2001  \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Better\\ Information\\ privacy\end{tabular}}        & 2    & 2      & 3,1304 & 1,3247                                                       & 3     & 0,5105   \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Delivery\\ Schedules\end{tabular}}                  & 5    & 4      & 3,8400 & 1,2806                                                       & 4     & -0,7117  \\ \hline
-\multicolumn{1}{|l|}{Supply Control}                                                                & 5    & 5      & 4,2400 & 0,9256                                                       & 3     & -0,8653  \\ \hline
+\multicolumn{1}{|l|}{Traceability}                                                                  & 5    & 5      & 4,40  & 1,12                                                       & 3     & -1,67  \\ \hline
+\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Development\\ of Industry\\ Standards\end{tabular}} & 4    & 4      & 3,63 & 1,06                                                       & 3     & -0,36  \\ \hline
+\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Fraud\\ Detection\end{tabular}}                     & 5    & 5      & 4,13 & 1,18                                                       & 3     & -1,00  \\ \hline
+\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Automated\\ Information \\ Sharing\end{tabular}}    & 5    & 4      & 3,64 & 1,19                                                       & 3     & -0,200  \\ \hline
+\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Better\\ Information\\ privacy\end{tabular}}        & 2    & 2      & 3,13 & 1,32                                                       & 3     & 0,51   \\ \hline
+\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Delivery\\ Schedules\end{tabular}}                  & 5    & 4      & 3,84 & 1,28                                                       & 4     & -0,71  \\ \hline
+\multicolumn{1}{|l|}{Supply Control}                                                                & 5    & 5      & 4,24 & 0,926                                                       & 3     & -0,87  \\ \hline
 \end{tabular}
-\caption{My caption}
-\label{my-label}
+}
 \end{table}
 
 %%%%%%%% TABLE END %%%%%%%%%%%%%%%%
 
-In this category, pretty much all the options had a range of 3 and deviations close to 1, which is to be expected. Traceability had the highest skew value, as there seemed to be some dissent, as a few outlier values pushed the mean to be lower than the median. However, it still rated the highest, by importance. 
+In this category, we can see the results on Table~\ref{table:metrics-importance-improvement-sc}. Pretty much all the options had a range of 3 and deviations close to 1, which is to be expected. Traceability had the highest skew value, as there seemed to be some dissent, as a few outlier values pushed the mean to be lower than the median. However, it still rated the highest, by importance. 
 
 The importance ranking described as before follows below:
 
@@ -100,24 +101,26 @@ The importance ranking described as before follows below:
 
 \begin{table}[h]
 \centering
-\caption{My caption}
-\label{my-label}
+\caption{Question results metrics for the question to rank the importance of functionalities in an information system for supply chain.}
+\label{table:metrics-importance-info-systems}
+\resizebox{\textwidth}{!}{
 \begin{tabular}{l|c|c|c|c|c|c|}
 \cline{2-7}
                                                                                                                                                 & \multicolumn{1}{l|}{Mode} & \multicolumn{1}{l|}{Median} & \multicolumn{1}{l|}{Mean} & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Standard\\  Deviation\end{tabular}} & \multicolumn{1}{l|}{Range} & \multicolumn{1}{l|}{Skewness} \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Interoperability Between \\ Systems (ERPs, MES, \\ and other information systems)\end{tabular}} & 5                         & 4,5                         & 4,2917                    & 0,8587                                                                             & 3                          & -1,0813                       \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Security according to the\\  latest security requirements \end{tabular}}                                               & 5                         & 5                           & 4,3333                    & 1,0495                                                                             & 3                          & -1,4862                       \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Standardized Process Interfaces \\ (Data Processing and APIs)\end{tabular}}                     & 4                         & 3                           & 3,3200                    & 1,1804                                                                             & 4                          & -0,3558                       \\ \hline
-\multicolumn{1}{|l|}{Standardized Data Formats}                                                                                                 & 4                         & 4                           & 3,6000                    & 0,9574                                                                             & 3                          & -0,3096                       \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Real-time tracking and sharing \\ of information with partners\end{tabular}}                    & 5                         & 4                           & 4,1600                    & 0,9434                                                                             & 3                          & -0,6664                       \\ \hline
-\multicolumn{1}{|l|}{Monitoring and controlling events}                                                                                         & 5                         & 3                           & 3,4800                    & 1,1944                                                                             & 3                          & 0,0513                       \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Option to add information \\ as attachment\end{tabular}}                                        & 2                         & 3                           & 2,7917                    & 1,0206                                                                             & 4                          & 0,1870                        \\ \hline
-\multicolumn{1}{|l|}{Controlled access for the users}                                                                                           & 4                         & 4                           & 4                         & 0,8528                                                                             & 3                          & -0,9632                       \\ \hline
+\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Interoperability Between \\ Systems (ERPs, MES, \\ and other information systems)\end{tabular}} & 5                         & 4,5                         & 4,29                    & 0,86                                                                             & 3                          & -1,08                       \\ \hline
+\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Security according to the\\  latest security requirements \end{tabular}}                                               & 5                         & 5                           & 4,33                    & 1,05                                                                             & 3                          & -1,49                       \\ \hline
+\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Standardized Process Interfaces \\ (Data Processing and APIs)\end{tabular}}                     & 4                         & 3                           & 3,32                    & 1,18                                                                            & 4                          & -0,36                       \\ \hline
+\multicolumn{1}{|l|}{Standardized Data Formats}                                                                                                 & 4                         & 4                           & 3,60                    & 0,96                                                                             & 3                          & -0,31                       \\ \hline
+\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Real-time tracking and sharing \\ of information with partners\end{tabular}}                    & 5                         & 4                           & 4,16                    & 0,94                                                                             & 3                          & -0,67                       \\ \hline
+\multicolumn{1}{|l|}{Monitoring and controlling events}                                                                                         & 5                         & 3                           & 3,48                    & 1,19                                                                             & 3                          & 0,05                       \\ \hline
+\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Option to add information \\ as attachment\end{tabular}}                                        & 2                         & 3                           & 2,79                    & 1,02                                                                             & 4                          & 0,19                        \\ \hline
+\multicolumn{1}{|l|}{Controlled access for the users}                                                                                           & 4                         & 4                           & 4                         & 0,85                                                                             & 3                          & -0,96                       \\ \hline
 \end{tabular}
+}
 \end{table}
 
 
-The same as before, the range of answers is pretty much 3 for all options but 2 of them. The mean and mediam of the items are also a close approximation of each other, which happens because the skew in most cases is  not very high (only for the Interoperability and Security items was it higher than 1). The skew is highest on the items that also had the highest mean. This happens because, even though these items are the most popular, there are always a few answers from people who disagree. However, this is to be ignored, given the low deviation and given that the median and mean are very close to each other in every case. Therefore, the mean can still be used here to classify the importance.
+Results for this question are found in Figure~\ref{fig:importance_SC_info_systems}, and the analysis metrics are in Table~\ref{table:metrics-importance-info-systems} the range of answers is pretty much 3 for all options but 2 of them. The mean and median of the items are also a close approximation of each other, which happens because the skew in most cases is  not very high (only for the Interoperability and Security items was it higher than 1). The skew is highest on the items that also had the highest mean. This happens because, even though these items are the most popular, there are always a few answers from people who disagree. However, this is to be ignored, given the low deviation and given that the median and mean are very close to each other in every case. Therefore, the mean can still be used here to classify the importance.
 
 The importance ranking described as before follows below:
 
@@ -165,7 +168,7 @@ The final important group of questions featured 2 questions about the viability 
 \begin{itemize}
     \item \textbf{Financial transactions was, by far, the most popular choice.} The respondents look at blockchain as a way to move money as an asset, more than a tool to manage the goods themselves, since traditional systems only deal with data and the money is dealt with by third parties (banks). It makes sense that \textbf{the second most voted choice is Contract Enforcement.} As per the background research and state of the art, it was pointed out that some of the applications already enforce payments through contracts, when the goods are delivered,for instance, without the need of a third party (thus reducing fees). Financial transactions and contract management go hand in hand. 
      
-    \item With the same number of votes, \textbf{also in second place, is "regulatory compliance and auditing"}. Regulatory compliance is a term also related to contracts enforcement. Contracts are used to establish mandatory rules which are automatically enforced according to the conditions of the system (for instance, enforce that the food transported in a truck never goes over a certain temperature value). \textbf{However, an important point to note is that regulatory compliance and auditing are made possible through the traceability characteristic of blockchain, which allows for products and processes to be thouroughly verified. This means that traceability is a highly sought after application of blockchain.}
+    \item With the same number of votes, \textbf{also in second place, is "regulatory compliance and auditing"}. Regulatory compliance is a term also related to contracts enforcement. Contracts are used to establish mandatory rules which are automatically enforced according to the conditions of the system (for instance, enforce that the food transported in a truck never goes over a certain temperature value). \textbf{However, an important point to note is that regulatory compliance and auditing are made possible through the traceability characteristic of blockchain, which allows for products and processes to be thoroughly verified. This means that traceability is a highly sought after application of blockchain.}
     \item "Secure data storage" was also a highly voted option. Security is an important focus in information systems, so this should be taken into account when building the proof-of-concept. In the previous set of questions, "access control" and "security according to the latest requirements" were also features that stood out, so \textbf{it is not a surprise that secure data storage is seen as one of the main advantages of blockchain, since it boasts of being cryptographically secure, having immutability by design and an easy to implement access control.}. 
 
 \end{itemize}
