--- a/survey/surveyintro.tex
+++ b/survey/surveyintro.tex
@@ -70,35 +70,9 @@ The questions of the survey can be roughly grouped into four main groups of ques
 
 %What is done with the data: what questions do we really want to answer with the collected data?
  
-The analysis of the answers is done through bar graphs and using mostly the \textbf{measures of central tendency or location},  \textbf{measures of central spread, scale or dispersion} and \textbf{measures of skewness and kurtosis}. The metrics used to analyze the data set and reach some conclusions, as well as the way they are interpreted in this study are detailed in Table~\ref{metrics-table}.
+The analysis of the answers is done through bar graphs and using mostly the \textbf{measures of central tendency or location},  \textbf{measures of central spread, scale or dispersion} and \textbf{measures of skewness and kurtosis}. The metrics used to analyze the data set and reach some conclusions are therefore: the mean, median and mode, the standard deviation and range, and the skew.
 
-%% PUT THESE INTO A TABLE AND EXPLAIN A LITTLE BETTER WHICH ONES ARE USED, WHEN AND WHY
-
-
-%%%%%%%%%%%% TABLE START%%%%%%%%%%%%%%
-
-% Please add the following required packages to your document preamble:
-% \usepackage{booktabs}
-% \usepackage{multirow}
-% \usepackage[normalem]{ulem}
-% \useunder{\uline}{\ul}{}
-\begin{table}[]
-\centering
-\caption{My caption}
-\label{metrics-table}
-\begin{tabular}{@{}l|l|l|@{}}
-\cmidrule(l){2-3}
-                                                                                                                              & Metrics                                                                & Meaning                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            \\ \midrule
-\multicolumn{1}{|l|}{\multirow{3}{*}{\begin{tabular}[c]{@{}l@{}}Measures of \\ Central Tendency \\ or Location\end{tabular}}} & \textbf{Mean}                                                          & \begin{tabular}[c]{@{}l@{}}The mean represents the most probable value. In this\\ survey, with the use of scales with a lower and upper \\ bounds, the mean has the roles of representing the \\ average value of agreement, importance and other\\  measures.Normally, when the skewness of a distribution\\ is high, the meaning of the mean may get distorted by \\ the existence of outlier values. However, since the scales\\  have a low range, with a lower and upper bound on the\\  answer values, this is not much of a concern. Therefore, \\ even in cases of skewness, the mean can be a useful metric.\end{tabular} \\ \cmidrule(l){2-3} 
-\multicolumn{1}{|l|}{}                                                                                                        & \textbf{Median}                                                        & \begin{tabular}[c]{@{}l@{}}Value of the 50\% percentile, for numerical answers. Half \\ the answers are above this value and half are below, \\ pointing to a central tendency around this value. This is \\ a good metric to use, especially in skewed distributions \\ where there are outliers in the collected values, since the\\ meaning of the mean may get slightly distorted by the \\ outlier values.\end{tabular}                                                                                                                                                                                                       \\ \cmidrule(l){2-3} 
-\multicolumn{1}{|l|}{}                                                                                                        & \textbf{Mode}                                                          & \begin{tabular}[c]{@{}l@{}}Most frequent response. Though it represents the most \\ popular answers, by itself the metric means nothing else,\\ as there might be answers almost as popular or not.\end{tabular}                                                                                                                                                                                                                                                                                                                                                                                                                   \\ \midrule
-\multicolumn{1}{|l|}{\multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Measures of\\ Spread, Scale or\\ Dispersion\end{tabular}}}    & \textbf{\begin{tabular}[c]{@{}l@{}}Standard \\ Deviation\end{tabular}} & \begin{tabular}[c]{@{}l@{}}Quantifies the variation within the data set, by showing \\ how much the distribution spreads to either sides of the\\ center. A high value for the standard deviation means\\ that there are a lot of values away from the mean, from \\ which can be concluded that there is not a general \\ consensus on a certain answers.A low value means that \\ there is consensus, since  all the values of the data set are \\ bundled more closely together.\end{tabular}                                                                                                                                    \\ \cmidrule(l){2-3} 
-\multicolumn{1}{|l|}{}                                                                                                        & \textbf{Range}                                                         & \begin{tabular}[c]{@{}l@{}}Difference between highest and lowest value of the data set.\\ Together with the standard deviation, indicates the dispersion \\ of the value of the answers. A range of 0 means that a\\ question had the same  value for all responses, for instance.\\ This metric ignores the frequency with which each answer \\ was given, that is why it must be coupled with the standard \\ deviation to be relevant.\end{tabular}                                                                                                                                                                              \\ \midrule
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Measures of\\ Skewness and \\ Kurtosis\end{tabular}}                          & \textbf{Skewness}                                                      & \begin{tabular}[c]{@{}l@{}}This metric indicates the lack of symmetry in a distribution, \\ where the results bunch up in one side of the distribution. \\ For instance, negative skewness values indicate a skew to \\ the left: the values bunch up  at the right end of the distribution \\ and the left tail is long, indicating there are outliers in the lower \\ values.\end{tabular}                                                                                                                                                                                                                                       \\ \bottomrule
-\end{tabular}
-\end{table}
-
-%%%%%%%%%%% TABLE END %%%%%%%%%%%%%%%%%%%%%
+The meaning behind these metrics and how they are applied here can be found in annex~\ref{annex:metrics}.
 
 To classify if the skew of the distribution is high or not, there is a measure that can be calculated, the skewness standard error, with the following formula: 
 $\sqrt\frac{6*N*(N-1)}{(N-2)*(N+1)*(N+3))}$, where $N = sample size$.
