--- a/survey/survey2.tex
+++ b/survey/survey2.tex
@@ -31,11 +31,11 @@ After inquiring about the blockchain knowledge of the respondents, some affirmat
 
 Independently, these affirmations do not hold an absolute value that can help ascertain if there is a need for a cryptocurrency in the case of supply chain. But together, the three affirmations lead to a higher degree of certainty.
 
-The first affirmation states that a blockchain, any at all, independently of the purpose or type, does indeed need a cryptocurrency. The second affirmation goes on a tangent from the first one, stating that maybe cryptocurrencies are only needed as an incentive, and otherwise could be not needed. The final affirmation is more generic in nature, and attempts to \textbf{completely separate the concept of blockchain and cryptocurrency}. The results for each affirmation can be found in Figure~\ref{fig:blockchain_crypto_opinions}. %and in Table~\ref{table:blockchain_crypto_opinions}.
-\todo{pedro: where is the table???}
+The first affirmation states that a blockchain, any at all, independently of the purpose or type, does indeed need a cryptocurrency. The second affirmation goes on a tangent from the first one, stating that maybe cryptocurrencies are only needed as an incentive, and otherwise could be not needed. The final affirmation is more generic in nature, and attempts to \textbf{completely separate the concept of blockchain and cryptocurrency}. The results for each affirmation can be found in Figure~\ref{fig:blockchain_crypto_opinions} and in Table~\ref{table:blockchain_crypto_opinions}.
+
 \begin{figure}[h]
 \centering
-\includegraphics[scale=1]{media/survey_group2/blockchain_crypto_opinions.pdf}
+\includegraphics[scale=0.95]{media/survey_group2/blockchain_crypto_opinions.pdf}
 \caption{Question to rate affirmations about the use of cryptocurrencies in the blockchain.}
 \label{fig:blockchain_crypto_opinions}
 \end{figure}
@@ -48,8 +48,9 @@ The first affirmation states that a blockchain, any at all, independently of the
 % \useunder{\uline}{\ul}{}
 \begin{table}[ht]
     \centering
-    \caption{My caption}
-    \label{my-label}
+    \caption{Question results metrics for the affirmations about the use of cryptocurrencies in the blockchain.}
+    \label{table:blockchain_crypto_opinions}
+    \resizebox{\textwidth}{!}{
     \begin{tabular}{l|c|c|c|c|c|c|}
     \cline{2-7}
                                                                                                                                                                 & \multicolumn{1}{l|}{Mode} & \multicolumn{1}{l|}{Median} & \multicolumn{1}{l|}{Mean} & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Standard\\  Deviation\end{tabular}} & \multicolumn{1}{l|}{Range} & \multicolumn{1}{l|}{Skewness} \\ \hline
@@ -57,6 +58,7 @@ The first affirmation states that a blockchain, any at all, independently of the
     \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}2.  Cryptocurrencies are only \\ useful as incentives in public \\ blockchains\end{tabular}}                & 4                         & 4                           & 4,06                      & 0,87                                                                               & 4                          & -2,51                         \\ \hline
     \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}3. Blockchains can be useful in\\ some cases, regardless of having \\ or not cryptocurrencies\end{tabular}} & 5                         & 5                           & 4,61                      & 0,50                                                                               & 1                          & -0,50                         \\ \hline
     \end{tabular}
+    }
     \end{table}
 %%%%%%%%%%% TABLE END %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -69,7 +71,7 @@ The first affirmation states that a blockchain, any at all, independently of the
 
 \subsection*{Conclusions from Question Group 2}
 
-With these conclusions in mind, one final conclusion can be derived. If blockchains do not need cryptocurrencies to perform well (concluded from the non agreement with affirmation 1) and can generally still be useful without them (affirmation 3), then \textbf{cryptocurrencies should not be considered a necessity, but rather a design option, depending on the benefits} it can bring to a particular use case. Taking this conclusion into account, and also according to the agreement with affirmation 2, then: \textbf{if a blockchain design features a private blockchain, it does not necessarily need a cryptocurrency as a requirement, since incentives are not needede pointed out}. This is an especially interesting conclusion for the proof-of-concept.
+With these conclusions in mind, one final conclusion can be derived. If blockchains do not need cryptocurrencies to perform well (concluded from the non agreement with affirmation 1) and can generally still be useful without them (affirmation 3), then \textbf{cryptocurrencies should not be considered a necessity, but rather a design option, depending on the benefits} it can bring to a particular use case. Taking this conclusion into account, and also according to the agreement with affirmation 2, then: \textbf{if a blockchain design features a private blockchain, it does not necessarily need a cryptocurrency as a requirement, since incentives are not needed}. This is an especially interesting conclusion for the proof-of-concept.
 
 %\subsection*{3 - Blockchain adoption challenges - maybe this one isnt that important to show}
 % MAYBE TAKE THIS ONE OUT - NOT THAT IMPORTANT
