--- a/thesis.tex
+++ b/thesis.tex
@@ -122,27 +122,19 @@
 	\mainmatter
 
 	%CONTENT
-	\todo{pedro: resumo em portugues}
-	\todo{pedro: dedicatoria e quote}
+	%\todo{pedro: resumo em portugues}
+	%\todo{pedro: dedicatoria e quote}
 	
-	%TABLES:
-	\todo{pedro: compor captions das tabelas, por em cima e com nome correto}
-	\todo{pedro: compor tamanhos das tabelas}
-	\todo{pedro: por so 2 casas decimais nas tabelas}
-
 	%SURVEY
 	%pedro: compor imagens dos graficos}
 	%pedro: corrigir localizacoes das figuras}
-	\todo{pedro: passar tabela estatistica para anexo}
 
 	%TEXT CONSISTENCY, GRAMMAR CHECKS AND GENERAL WRITING
-	\todo{pedro: consistent with the use of bold or italic, especially on thesis questions and in the items of the survey}
-	\todo{pedro: fix the use of abbreviations so that they are more consistent}
+	%\todo{pedro: consistent with the use of bold or italic, especially on thesis questions and in the items of the survey}
 	
 	%EXTRA FORMATTING
-	\todo{pedro: ter os anexos}
-	\todo{pedro: ter glossario e/ou abreviacoes}
-	\todo{pedro: conteudo da capa em ingles}
+	%\todo{pedro: ter glossario e/ou abreviacoes}+
+	%\todo{pedro: fix the use of abbreviations so that they are more consistent}
 	
 
 	%\subsection*{2. Naming Conventions and Definitions}
